@@ -1,3 +1,9 @@
+2007-05-09  Mark Shinwell  <shinwell@codesourcery.com>
+
+	* elf32-arm.c (bfd_elf32_arm_vfp11_erratum_scan): Don't
+	attempt to scan if the bfd doesn't correspond to an ELF image.
+	(bfd_elf32_arm_vfp11_fix_veneer_locations): Likewise.
+
 2007-05-08  Alexandre Oliva  <aoliva@redhat.com>
 
 	* elf32-frv.c (elf32_frv_relocate_section): Discard dynamic relocs
